--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,500;1,500&display=swap');
 
+:root {
+  --card-w: 420px;
+  --img-w: 600px;
+  --certificate-w: 600px;
+  --certificate-h: 500px;
+  --icon-w: 400px;
+  --font-size: 2rem;
+}
+
 body {
   min-height: 100vh;
   max-width: 100vw;
@@ -70,7 +79,7 @@ section {
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 420px;
+  width: var(--card-w);
   height: auto;
   cursor: pointer;
   transform-style: preserve-3d;
@@ -83,7 +92,7 @@ section {
 
 .project-card {
   position: absolute;
-  width: 420px;
+  width: var(--card-w);
   height: auto;
   backface-visibility: hidden;
   display: flex;
@@ -131,7 +140,7 @@ section {
 }
 
 #git-icon {
-  font-size: 2.5rem;
+  font-size: calc(var(--font-size) + 0.5rem);
   padding-bottom: 0.5rem;
 }
 
@@ -149,7 +158,7 @@ section {
   animation: slidedown 1s ease-in-out infinite;
   position: absolute;
   top: -20px;
-  backface-visibility: hidden;
+  /* backface-visibility: hidden; */
 }
 
 .arrow {
@@ -160,8 +169,9 @@ section {
   border: 2.5px solid;
   /* opacity: 0.5; */
   transform: rotate(-135deg);
-  border-color: #1e1f26 transparent transparent #1e1f26;
-  backface-visibility: hidden;
+  border-color: white transparent transparent white;
+  /* backface-visibility: hidden; */
+  z-index: -1;
 }
 
 @keyframes slidedown {
@@ -179,54 +189,26 @@ section {
   }
   100% {
     transform:translateY(-2px); 
+    backface-visibility: hidden;
   }	
 }
-
-/* .project-container:hover > .arrowSliding {
-  position: absolute;
-  animation: slideright 4s linear infinite;
-}
-.project-container:hover > .arrowSliding {
-  position: absolute;
-  animation: slideleft 4s linear infinite;
-} */
-
-/* .delay1 {
-  animation-delay: 1s;
-}
-.delay2 {
-  animation-delay: 2s;
-}
-.delay3 { 
-  animation-delay: 3s;
-} */
-
-/* @keyframes slideright {
-    0% { opacity:0; transform:translateY(15px); }	
-   20% { opacity:1; transform:translateY(9px); }	
-   80% { opacity:1; transform:translateY(-9px); }	
-  100% { opacity:0; transform:translateY(-15px); }	
-} */
-
-
-
 
 
 /* img styling */
 
 .img-card {
   margin: 2%;
-  width: 600px;
+  width: var(--img-w);
   height: auto;
 }
 
 .active {
-  width: 600px;
+  width: var(--img-w);
   height: auto;
 }
 
 .static {
-  width: 600px;
+  width: var(--img-w);
   height: auto;
   position:absolute;
 }
@@ -241,8 +223,8 @@ section {
 .certificate-card {
   margin: 2%;
   display: flex;
-  width: 600px;
-  height: 500px;
+  width: var(--certificate-w);
+  height: var(--certificate-h);
   /* position: absolute; */
   align-items: center;
 }
@@ -269,7 +251,7 @@ section {
 
 .certificate-img > img {
   /* border: 5px solid black; */
-  width: 600px;
+  width: var(--certificate-w);
   height: auto;
 }
 
@@ -284,7 +266,7 @@ section {
   margin: 1%;
   display: flex;
   align-items: center;
-  width: 400px;
+  width: var(--icon-w);
 }
 .icon-card > p {
   margin-left: 50px;
@@ -292,7 +274,7 @@ section {
 #icon {
   /* padding: 10%; */
   color: white;
-  font-size: 5rem;
+  font-size: calc(var(--font-size) + 3rem);
 }
 
 
@@ -332,9 +314,9 @@ ul {
   transform: scale(1.5);
 }
 header > h1 {
-  font-size: 100px;
+  font-size: calc(var(--font-size) + 4.5rem);
   margin-top: 0%;
-  margin-bottom: 1%;
+  margin-bottom: 0%;
   padding-top: 2%;
   padding-left: 5%;
   font-family: 'Chakra Petch';
@@ -350,8 +332,108 @@ header > p {
 }
 
 
-/* Canvas styling */
+/* media queries */
 
-/* .canvas {
-  z-index: -1;
-} */
+/* tablets portrait */
+@media only screen 
+      and (min-width: 751px)
+      and (max-width: 1050px)
+      and (orientation: portrait) {
+
+        .static, .active, .img-card {
+          width: calc(var(--img-w) - 200px);
+        }
+        header > h1 {
+          font-size: calc(var(--font-size) + 3rem);
+        }
+        header > p {
+          font-size: calc(var(--font-size) - 0.5rem);
+        }
+
+}
+/* tablets landscape */
+@media only screen 
+      and (min-width: 751px)
+      and (max-width: 1050px)
+      and (orientation: landscape) {
+
+        .static, .active, .img-card {
+          width: calc(var(--img-w) - 200px);
+        }
+        header > h1 {
+          font-size: calc(var(--font-size) + 2rem);
+        }
+
+}
+
+/* mobile devices portrait */
+@media only screen 
+      and (min-width: 320px) 
+      and (max-width: 750px) 
+      and (orientation: portrait) {
+
+        .static, .active, .img-card {
+          width: calc(var(--img-w) - 450px);
+        }
+        header > h1 {
+          font-size: calc(var(--font-size) + 0.4rem);
+        }
+        header > p {
+          font-size: calc(var(--font-size) - 1.2rem);
+        }
+        .card, .project-card {
+          width: calc(var(--card-w) - 250px);
+          font-size: calc(var(--font-size) - 1.5rem);
+          /* border-style: solid; */
+        }
+        .card-front-style, .card__face--back {
+          border-width: 2px;
+        }
+        .nav-link {
+          font-size: calc(var(--font-size) - 1.6rem);
+        }
+        .arrow {
+          width: 2px;
+          height: 2px;
+        }
+        #git-icon {
+          font-size: calc(var(--font-size) - 0.5rem);
+        }
+        .certificate-info {
+          width: calc(var(--certificate-w) - 300px);
+          height: calc(var(--certificate-h) - 200px);
+        }
+        .certificate-img > img{
+          width: calc(var(--certificate-w) - 300px);
+        }
+}
+/* mobile devices landscape */
+@media only screen 
+      and (min-width: 320px) 
+      and (max-width: 750px) 
+      and (orientation: landscape) {
+
+        .static, .active, .img-card {
+          width: calc(var(--img-w) - 350px);
+        }
+        header > h1 {
+          font-size: calc(var(--font-size) - 0.5rem);
+        }
+        header > p {
+          font-size: calc(var(--font-size) - 0.8rem);
+        }
+        .card, .project-card {
+          width: calc(var(--card-w) - 400px);
+          font-size: calc(var(--font-size) - 1.5rem);
+        }
+        .card-front-style, .card__face--back {
+          border-width: 2px;
+        }
+        .nav-link {
+          font-size: calc(var(--font-size) - 1.8rem);
+        }
+        .arrow {
+          width: 2px;
+          height: 2px;
+        }
+}
