--- a/src/App.css
+++ b/src/App.css
@@ -155,41 +155,44 @@ section {
   align-items: center;
   flex-direction: column;
   margin-bottom: 3px;
-  animation: slidedown 1s ease-in-out infinite;
   position: absolute;
   top: -20px;
-  /* backface-visibility: hidden; */
+  backface-visibility: hidden;
+  animation: slidedown 1s ease-in-out 8;
+  opacity: 0;
 }
 
 .arrow {
   /* position: absolute; */
+  /* display: none; */
   /* backface-visibility: hidden; */
+  /* display: none; */
   width: 10px;
   height: 10px;
   border: 2.5px solid;
   /* opacity: 0.5; */
   transform: rotate(-135deg);
   border-color: white transparent transparent white;
-  /* backface-visibility: hidden; */
+  backface-visibility: hidden;
   z-index: -1;
 }
 
 @keyframes slidedown {
-  0% {
-    transform:translateY(-2px); 
+  0%, 100% {
+    transform: translateY(-2px);
+    opacity: 1;
   }	
   25% {
-    transform:translateY(-12px); 
+    transform: translateY(-12px);
+    opacity: 1;
   }	
   50% {
     transform: translateY(-2px);
+    opacity: 1;
   }
   75% {
     transform: translateY(-12px);
-  }
-  100% {
-    transform:translateY(-2px); 
-    backface-visibility: hidden;
+    opacity: 1;
   }	
 }
 
@@ -275,7 +278,7 @@ section {
   color: white;
   font-size: calc(var(--font-size) + 3rem);
 }
-.contact-link > a, a:visited, a:visited {
+.contact-link > a, a:visited {
   color: white;
   text-decoration: none;
 }
@@ -332,6 +335,36 @@ header > p {
   padding-left: 4%;
   font-style: italic;
   position: absolute;
+}
+
+/* About page */
+
+.about-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3%;
+}
+.about-img-card {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  margin-left: 10%;
+  padding: 3%;
+}
+.about-img {
+  width: 250px;
+  height: 275px;
+  border-radius: 50%;
+  opacity: 0.8;
+}
+.about-info-card {
+  width: 70%;
+  /* padding: 10%; */
+  margin-right: 10%;
+}
+.about-info-card > p {
+  line-height: 2;
 }
 
 
